@@ -1,10 +1,10 @@
 package no.einnsyn.apiv3.entities.journalpost;
 
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.context.annotation.Lazy;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.elasticsearch.core.ElasticsearchOperations;
@@ -13,6 +13,7 @@ import org.springframework.data.elasticsearch.core.query.IndexQuery;
 import org.springframework.data.elasticsearch.core.query.IndexQueryBuilder;
 import org.springframework.stereotype.Service;
 import com.google.gson.Gson;
+import jakarta.annotation.Resource;
 import jakarta.transaction.Transactional;
 import lombok.Getter;
 import no.einnsyn.apiv3.entities.dokumentbeskrivelse.DokumentbeskrivelseRepository;
@@ -22,6 +23,8 @@ import no.einnsyn.apiv3.entities.dokumentbeskrivelse.models.DokumentbeskrivelseJ
 import no.einnsyn.apiv3.entities.enhet.EnhetService;
 import no.einnsyn.apiv3.entities.enhet.models.Enhet;
 import no.einnsyn.apiv3.entities.expandablefield.ExpandableField;
+import no.einnsyn.apiv3.entities.innsynskravdel.InnsynskravDelRepository;
+import no.einnsyn.apiv3.entities.innsynskravdel.InnsynskravDelService;
 import no.einnsyn.apiv3.entities.journalpost.models.Journalpost;
 import no.einnsyn.apiv3.entities.journalpost.models.JournalpostJSON;
 import no.einnsyn.apiv3.entities.korrespondansepart.KorrespondansepartRepository;
@@ -54,6 +57,15 @@ public class JournalpostService extends RegistreringService<Journalpost, Journal
   @Getter
   private final JournalpostRepository repository;
 
+  private final InnsynskravDelRepository innsynskravDelRepository;
+
+  @Lazy
+  @Resource
+  private InnsynskravDelService innsynskravDelService;
+
+  @Getter
+  private JournalpostService service = this;
+
   @Value("${application.elasticsearchIndex}")
   private String elasticsearchIndex;
 
@@ -64,7 +76,8 @@ public class JournalpostService extends RegistreringService<Journalpost, Journal
       DokumentbeskrivelseRepository dokumentbeskrivelseRepository,
       DokumentbeskrivelseService dokumentbeskrivelseService,
       JournalpostRepository journalpostRepository, Gson gson,
-      ElasticsearchOperations elasticsearchOperations) {
+      ElasticsearchOperations elasticsearchOperations,
+      InnsynskravDelRepository innsynskravDelRepository) {
     super();
     this.enhetService = enhetService;
     this.saksmappeRepository = saksmappeRepository;
@@ -77,6 +90,7 @@ public class JournalpostService extends RegistreringService<Journalpost, Journal
     this.repository = journalpostRepository;
     this.gson = gson;
     this.elasticsearchOperations = elasticsearchOperations;
+    this.innsynskravDelRepository = innsynskravDelRepository;
   }
 
 
@@ -97,6 +111,7 @@ public class JournalpostService extends RegistreringService<Journalpost, Journal
    * @param shouldUpdateRelatives
    * @return
    */
+  @Override
   public void index(Journalpost journalpost, boolean shouldUpdateRelatives) {
     JournalpostJSON journalpostES = toES(journalpost);
 
@@ -125,6 +140,7 @@ public class JournalpostService extends RegistreringService<Journalpost, Journal
    * @param currentPath The current path in the object tree
    * @return
    */
+  @Override
   public Journalpost fromJSON(JournalpostJSON json, Journalpost journalpost, Set<String> paths,
       String currentPath) {
     super.fromJSON(json, journalpost, paths, currentPath);
@@ -173,7 +189,7 @@ public class JournalpostService extends RegistreringService<Journalpost, Journal
       if (skjermingField.getId() != null) {
         skjerming = skjermingRepository.findById(skjermingField.getId());
       } else {
-        String skjermingPath = currentPath.equals("") ? "skjerming" : currentPath + ".skjerming";
+        String skjermingPath = currentPath.isEmpty() ? "skjerming" : currentPath + ".skjerming";
         paths.add(skjermingPath);
         skjerming =
             skjermingService.fromJSON(skjermingField.getExpandedObject(), paths, skjermingPath);
@@ -183,14 +199,14 @@ public class JournalpostService extends RegistreringService<Journalpost, Journal
 
     // Update korrespondansepart
     List<ExpandableField<KorrespondansepartJSON>> korrpartFieldList = json.getKorrespondansepart();
-    korrpartFieldList.forEach((korrpartField) -> {
+    korrpartFieldList.forEach(korrpartField -> {
       Korrespondansepart korrpart = null;
       if (korrpartField.getId() != null) {
         korrpart = korrespondansepartRepository.findById(korrpartField.getId());
       } else {
         KorrespondansepartJSON korrpartJSON = korrpartField.getExpandedObject();
         String korrespondansepartPath =
-            currentPath.equals("") ? "korrespondansepart" : currentPath + ".korrespondansepart";
+            currentPath.isEmpty() ? "korrespondansepart" : currentPath + ".korrespondansepart";
         paths.add(korrespondansepartPath);
         korrpart = korrespondansepartService.fromJSON(korrpartJSON, paths, korrespondansepartPath);
       }
@@ -199,13 +215,13 @@ public class JournalpostService extends RegistreringService<Journalpost, Journal
 
     // Update dokumentbeskrivelse
     List<ExpandableField<DokumentbeskrivelseJSON>> dokbeskFieldList = json.getDokumentbeskrivelse();
-    dokbeskFieldList.forEach((dokbeskField) -> {
+    dokbeskFieldList.forEach(dokbeskField -> {
       Dokumentbeskrivelse dokbesk = null;
       if (dokbeskField.getId() != null) {
         dokbesk = dokumentbeskrivelseRepository.findById(dokbeskField.getId());
       } else {
         String dokbeskPath =
-            currentPath.equals("") ? "dokumentbeskrivelse" : currentPath + ".dokumentbeskrivelse";
+            currentPath.isEmpty() ? "dokumentbeskrivelse" : currentPath + ".dokumentbeskrivelse";
         paths.add(dokbeskPath);
         dokbesk = dokumentbeskrivelseService.fromJSON(dokbeskField.getExpandedObject(), paths,
             dokbeskPath);
@@ -214,7 +230,7 @@ public class JournalpostService extends RegistreringService<Journalpost, Journal
     });
 
     // Look for administrativEnhet and saksbehandler from Korrespondansepart
-    Boolean updatedAdministrativEnhet = false;
+    boolean updatedAdministrativEnhet = false;
     for (ExpandableField<KorrespondansepartJSON> korrpartField : korrpartFieldList) {
       KorrespondansepartJSON korrpartJSON = korrpartField.getExpandedObject();
       if (korrpartJSON == null) {
@@ -222,10 +238,11 @@ public class JournalpostService extends RegistreringService<Journalpost, Journal
         korrpartJSON = korrespondansepartService.toJSON(korrpart);
       }
       // Add administrativEnhet from Korrespondansepart where `erBehandlingsansvarlig == true`
-      if (korrpartJSON.getErBehandlingsansvarlig() == true
+      if (korrpartJSON.getErBehandlingsansvarlig() != null
+          && korrpartJSON.getErBehandlingsansvarlig()
           && korrpartJSON.getAdministrativEnhet() != null) {
         journalpost.setAdministrativEnhet(korrpartJSON.getAdministrativEnhet());
-        // TODO: journalpost.setSaksbehandler() ?
+        journalpost.setSaksbehandler(korrpartJSON.getSaksbehandler());
         updatedAdministrativEnhet = true;
         break;
       }
@@ -238,7 +255,10 @@ public class JournalpostService extends RegistreringService<Journalpost, Journal
               || korrpartJSON.getKorrespondanseparttype().equals("internAvsender")
               || korrpartJSON.getKorrespondanseparttype().equals("internMottaker"))) {
         journalpost.setAdministrativEnhet(korrpartJSON.getAdministrativEnhet());
-        // TODO: journalpost.setSaksbehandler() ?
+        // TODO: Do we need more logic to find saksbehandler?
+        // !StringUtils.containsIgnoreCase(korrespondansepart1.getSaksbehandler(),
+        // UFORDELT_LOWER_CASE))
+        journalpost.setSaksbehandler(korrpartJSON.getSaksbehandler());
         updatedAdministrativEnhet = true;
       }
     }
@@ -269,6 +289,7 @@ public class JournalpostService extends RegistreringService<Journalpost, Journal
    * @param currentPath The current path in the object tree
    * @return
    */
+  @Override
   public JournalpostJSON toJSON(Journalpost journalpost, JournalpostJSON json,
       Set<String> expandPaths, String currentPath) {
 
@@ -313,8 +334,6 @@ public class JournalpostService extends RegistreringService<Journalpost, Journal
           expandPaths, currentPath));
     }
 
-    // ExpandableField<Saksmappe> saksmappeField = journalpost.getSaksmappe();
-    // ...
     return json;
   }
 
@@ -326,18 +345,19 @@ public class JournalpostService extends RegistreringService<Journalpost, Journal
    * @param journalpostES
    * @return
    */
+  @Override
   public JournalpostJSON toES(Journalpost journalpost, JournalpostJSON journalpostES) {
     super.toES(journalpost, journalpostES);
 
     // Get JSON object, and expand required fields
-    Set<String> expandPaths = new HashSet<String>();
+    Set<String> expandPaths = new HashSet<>();
     expandPaths.add("skjerming");
     expandPaths.add("korrespondansepart");
     expandPaths.add("dokumentbeskrivelse");
     toJSON(journalpost, journalpostES, expandPaths, "");
 
     // Add type, that for some (legacy) reason is an array
-    journalpostES.setType(Arrays.asList("Journalpost"));
+    journalpostES.setType(List.of("Journalpost"));
 
     // Legacy, this field name is used in the old front-end.
     journalpostES.setOffentligTittel_SENSITIV(journalpost.getOffentligTittelSensitiv());
@@ -347,13 +367,12 @@ public class JournalpostService extends RegistreringService<Journalpost, Journal
     for (Korrespondansepart korrespondansepart : korrespondansepartList) {
 
       if (korrespondansepart.getKorrespondanseparttype().equals("avsender")) {
-        journalpostES.setAvsender(Arrays.asList(korrespondansepart.getKorrespondansepartNavn()));
-        journalpostES.setAvsender_SENSITIV(
-            Arrays.asList(korrespondansepart.getKorrespondansepartNavnSensitiv()));
-      } else if (korrespondansepart.getKorrespondanseparttype().equals("mottaker")) {
-        journalpostES.setMottaker(Arrays.asList(korrespondansepart.getKorrespondansepartNavn()));
+        journalpostES.setAvsender(List.of(korrespondansepart.getKorrespondansepartNavn()));
         journalpostES
-            .setMottaker_SENSITIV(Arrays.asList(korrespondansepart.getKorrespondansepartNavn()));
+            .setAvsender_SENSITIV(List.of(korrespondansepart.getKorrespondansepartNavnSensitiv()));
+      } else if (korrespondansepart.getKorrespondanseparttype().equals("mottaker")) {
+        journalpostES.setMottaker(List.of(korrespondansepart.getKorrespondansepartNavn()));
+        journalpostES.setMottaker_SENSITIV(List.of(korrespondansepart.getKorrespondansepartNavn()));
       }
     }
 
@@ -388,19 +407,15 @@ public class JournalpostService extends RegistreringService<Journalpost, Journal
     // Delete all korrespondanseparts
     List<Korrespondansepart> korrespondansepartList = journalpost.getKorrespondansepart();
     if (korrespondansepartList != null) {
-      journalpost.setKorrespondansepart(Arrays.asList());
-      korrespondansepartList.forEach((korrespondansepart) -> {
-        korrespondansepartService.delete(korrespondansepart);
-      });
+      journalpost.setKorrespondansepart(List.of());
+      korrespondansepartList.forEach(korrespondansepartService::delete);
     }
 
     // Unrelate all dokumentbeskrivelses
     List<Dokumentbeskrivelse> dokbeskList = journalpost.getDokumentbeskrivelse();
     if (dokbeskList != null) {
-      journalpost.setDokumentbeskrivelse(Arrays.asList());
-      dokbeskList.forEach(dokbesk -> {
-        dokumentbeskrivelseService.deleteIfOrphan(dokbesk);
-      });
+      journalpost.setDokumentbeskrivelse(List.of());
+      dokbeskList.forEach(dokumentbeskrivelseService::deleteIfOrphan);
     }
 
     // Unrelate skjerming, delete if orphan
@@ -408,6 +423,12 @@ public class JournalpostService extends RegistreringService<Journalpost, Journal
     if (skjerming != null) {
       journalpost.setSkjerming(null);
       skjermingService.deleteIfOrphan(skjerming);
+    }
+
+    // Delete all innsynskravDels
+    var innsynskravDelList = innsynskravDelRepository.findByJournalpost(journalpost);
+    if (innsynskravDelList != null) {
+      innsynskravDelList.forEach(innsynskravDelService::delete);
     }
 
     // Delete journalpost
